Fixed headerText during call Fixed fullscreen icons were invisible

--- a/chat/static/sass/chat.sass
+++ b/chat/static/sass/chat.sass
@@ -993,6 +993,7 @@ fieldset
 
 .icon-webrtc-cont
 	display: none
+	z-index: 1 // override webrtc fullscreen z-index
 	position: absolute
 	bottom: 2vh
 	left: 2vw
